--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h3 {
 }
  /* portfolio styles */
  .content h1 {
-    color: black;
+    color: rgb(128, 100, 24);
 }
 
 #portfolio {
@@ -92,17 +92,20 @@ h3 {
 }
 
 #portfolio li {
-    background: #fff;
+    background: rgb(153, 112, 15);
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
 }
 
 #portfolio li:hover {
-    background: #eee;
+    background: #f0ebeb;
 }
 
 #portfolio a {
     text-decoration: none;
     color: #454545;
+}
+#portfolio-header{
+    color:white;
 }
